Optimize history performance by caching more data in RDFOutlineViewItems, and making sure we update the history sidebar only once per page load. Bug 180109. Performance is still poor; fixing that would require not using RDF.